--- a/index.html
+++ b/index.html
@@ -47,17 +47,41 @@
     </div>
   </div>
 
-  <audio data-key="65" src="sounds/clap.wav"></audio>
-  <audio data-key="83" src="sounds/hihat.wav"></audio>
-  <audio data-key="68" src="sounds/kick.wav"></audio>
-  <audio data-key="70" src="sounds/openhat.wav"></audio>
-  <audio data-key="71" src="sounds/boom.wav"></audio>
-  <audio data-key="72" src="sounds/ride.wav"></audio>
-  <audio data-key="74" src="sounds/snare.wav"></audio>
-  <audio data-key="75" src="sounds/tom.wav"></audio>
-  <audio data-key="76" src="sounds/tink.wav"></audio>
+  <audio data-key="65" src="/assets/sounds/01 - JavaScript Drum Kit_sounds_clap.wav"></audio>
+  <audio data-key="83" src="/assets/sounds/01 - JavaScript Drum Kit_sounds_hihat.wav"></audio>
+  <audio data-key="68" src="/assets/sounds/01 - JavaScript Drum Kit_sounds_kick.wav"></audio>
+  <audio data-key="70" src="/assets/sounds/01 - JavaScript Drum Kit_sounds_openhat.wav"></audio>
+  <audio data-key="71" src="/assets/sounds/01 - JavaScript Drum Kit_sounds_boom.wav"></audio>
+  <audio data-key="72" src="/assets/sounds/01 - JavaScript Drum Kit_sounds_ride.wav"></audio>
+  <audio data-key="74" src="/assets/sounds/01 - JavaScript Drum Kit_sounds_snare.wav"></audio>
+  <audio data-key="75" src="/assets/sounds/01 - JavaScript Drum Kit_sounds_tom.wav"></audio>
+  <audio data-key="76" src="/assets/sounds/01 - JavaScript Drum Kit_sounds_tink.wav"></audio>
 
 <script>
+  const keys = document.querySelectorAll('.key')
+
+  function playSound(e) {
+     //get the audio tag that matches the key being pressed
+     const audio = document.querySelector(`audio[data-key="${event.keyCode}"]`)
+    //rewind the audio clip to the start so we dont have to wait for it to finish before a new one begins
+    audio.currentTime = 0;
+    //play the audio that is attached to that tag
+    audio.play()
+
+    //add the playing class to whatever key is being pressed
+    const key = document.querySelector(`.key[data-key="${event.keyCode}"]`)
+    key.classList.add('playing')
+  }
+
+  function removeTransition (e) {
+    //skip if its not a transform
+    if (e.propertyName !== 'transform') return;
+    this.classList.remove('playing')
+  }
+
+  
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition))
+  window.addEventListener("keydown", playSound)
 
 </script>
 
